better readability style fix

--- a/styles/Frontpage.module.scss
+++ b/styles/Frontpage.module.scss
@@ -30,7 +30,7 @@
             font-weight: 700;
             background: #BC0000;
             padding: 1.25vmax 1.75vmax; 
-            // border-radius: 12px;
+            border-radius: .5rem;
             width: fit-content;       
             transition: .2s ease-in-out;
             box-shadow: 1px 2px 5px #212121;     
