--- a/styles/content.module.scss
+++ b/styles/content.module.scss
@@ -91,6 +91,9 @@
         max-width: 35ch;
         margin: .5rem 0;
         line-height: 1.8 !important;
+        background: rgba(150,150,150,.125);
+        padding: 1.5rem 1.1rem;
+        border-radius: .5rem;
     }
     
 }
